manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend  #-deployment
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: andreasmastakouris/project-backend:vr3
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend  # -service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
